# uwurg

./: .editorconfig  CMakeLists.txt  README.md  TODO.md  flake.nix  nvim-cc.txt  totest.md
.github/workflows/: cmake-single-platform.yml
src/: README.md  def.hpp  main.cpp  window.cpp  window.hpp
src/Game/: Game.cpp  Game.hpp  GameBot.cpp  GameBot.hpp  GamePlay.cpp  GamePlay.hpp  GameState.hpp  GameTurn.hpp  GameUtils.cpp  GameUtils.hpp  Gameplay.cpp  Gameplay.hpp
src/ManagedSound/: ManagedSound.cpp  ManagedSound.hpp
src/Message/: Message.h  Message.hpp
src/Object/: ObjBead.hpp  ObjBeadBtnMan.hpp  ObjBtnSkip.hpp  ObjButton.hpp  ObjDiceRender.hpp  ObjScore.hpp  ObjSlide.hpp  ObjText.cpp  ObjText.hpp  ObjTurnIndicator.hpp  Object.cpp  Object.hpp  object.cpp  object.hpp
src/ObjectManager/: ObjectManager.cpp  ObjectManager.hpp
src/Shaders/: ShadersManager.cpp  ShadersManager.hpp  beadShaders.hpp  ingameShaders.hpp  menuShaders.hpp  menu_fragment.glsl
src/SoundManager/: SoundManager.cpp  SoundManager.hpp
src/State/: State.cpp  State.hpp
src/TextureManager/: TextureManager.cpp  TextureManager.hpp
src/TextureWrapper/: TextureWrapper.cpp  TextureWrapper.hpp  texture_wrapper.cpp  texture_wrapper.hpp
src/Window/: Window.cpp  Window.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  GameEnums.cpp  Object.cpp  ObjectManager.cpp  ShaderManager.cpp  SoundManager.cpp  State.cpp  TextureManager.cpp  main.cpp  tests.hpp
